--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,12 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# AI-related files
+*ai-services*
+*ai-hooks*
+*AI_DEMO*
+CONTEXTUAL_AI_DEMO.md
+
 # vercel
 .vercel
 
